--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -27,6 +27,12 @@ jobs:
     needs: build_docker_image
     steps:
       - uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
       - name: Extract the dist data
         run: |
           make extract
