--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -33,11 +33,20 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+      - name: Set up gcloud Cloud SDK environment
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
       - name: Extract the dist data
         run: |
           make extract
-          mv output/quicklisp .
       - uses: actions/upload-artifact@v2
         with:
           name: quicklisp-dist
-          path: quicklisp
+          path: output
+      - name: Upload to GCS
+        if: github.ref == 'refs/heads/master'
+        run: |
+          make upload
