--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -66,6 +66,7 @@ jobs:
           make upload
   push_docker_image:
     name: Push Docker image
+    runs-on: ubuntu-latest
     needs: build_docker_image
     if: github.ref == 'refs/heads/master'
     steps:
