Set BUCKET_BASE_URL.

--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -60,6 +60,8 @@ jobs:
           docker load --input /tmp/docker-image.tar
           docker image ls -a
       - name: Extract the dist data
+        env:
+          BUCKET_BASE_URL: https://storage.googleapis.com/quickdocs-dist
         run: |
           make extract
       - name: Upload to GCS
