--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -3,7 +3,7 @@ name: Extract Quicklisp dist data
 on:
   push:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 1,13 * * *'
 
 jobs:
   extract:
