--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -38,7 +38,10 @@ jobs:
         env:
           BUCKET_BASE_URL: https://storage.googleapis.com/quickdocs-dist
         run: |
-          make generate-index extract
+          if [ "$GITHUB_EVENT_NAME" == "push" ]; then
+            EXTRACT_ALL=1
+          fi
+          make generate-index extract EXTRACT_ALL=${EXTRACT_ALL}
       - name: Upload to GCS
         if: github.ref == 'refs/heads/master'
         run: |
