Write the response from GitHub API.

--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -87,8 +87,9 @@ jobs:
         if: always()
         run: |
           if [ -f github_deployment ]; then
-            deployment_id=$(cat github_deployment | jq -r '.id')
-            deployment_state=$(curl -H "Authorization: token $GITHUB_TOKEN" -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/$GITHUB_REPOSITORY/deployments/$deployment_id/statuses | jq -r '.[0] | .state')
+            deployment_statuses_url=$(cat github_deployment | jq -r '.statuses_url')
+            curl -i -H "Authorization: token $GITHUB_TOKEN" -H 'Accept: application/vnd.github.v3+json' $deployment_statuses_url
+            deployment_state=$(curl -s -H "Authorization: token $GITHUB_TOKEN" -H 'Accept: application/vnd.github.v3+json' $deployment_statuses_url | jq -r '.[0] | .state')
             case "$deployment_state" in
               success)
                 ;;
