--- a/.github/workflows/extract-dist.yaml
+++ b/.github/workflows/extract-dist.yaml
@@ -87,10 +87,12 @@ jobs:
           fi
       - name: Finalize the deployment
         if: always()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [ -f github_deployment ]; then
             deployment_id=$(cat github_deployment | jq -r '.id')
-            deployment_state=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/$GITHUB_REPOSITORY/deployments/$deployment_id/statuses | jq -r '.[0] | .state')
+            deployment_state=$(curl -H "Authorization: token $GITHUB_TOKEN" -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/$GITHUB_REPOSITORY/deployments/$deployment_id/statuses | jq -r '.[0] | .state')
             case "$deployment_state" in
               pending|in_progress|queued)
                 github_run_url="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID"
