--- a/.github/workflows/invoke-extract.yaml
+++ b/.github/workflows/invoke-extract.yaml
@@ -16,7 +16,7 @@ jobs:
           quicklisp_version=$(make quicklisp_version)
           echo "Creating a deployment"
           curl -s -X POST \
-            -H 'Authorization: token ${{ github.token }}' \
+            -H 'Authorization: token ${{ secrets.GH_DEPLOY_TOKEN }}' \
             -H 'Accept: application/vnd.github.v3+json' \
             https://api.github.com/repos/${GITHUB_REPOSITORY}/deployments \
             -d "{\"ref\":\"master\",\"required_contexts\":[],\"payload\":{\"version\":\"${quicklisp_version}\",\"target\":\"all\"}}" \
