--- a/.github/workflows/invoke-update.yaml
+++ b/.github/workflows/invoke-update.yaml
@@ -17,5 +17,5 @@ jobs:
               -H 'Authorization: token ${{ secrets.GH_DEPLOY_TOKEN }}' \
               -H 'Accept: application/vnd.github.v3+json' \
               https://api.github.com/repos/quickdocs/dist-updater/deployments \
-              -d "{\"ref\":\"master\",\"required_contexts\":[],\"payload\":{\"version\":\"${quicklisp_version}\"}}" \
+              -d "{\"ref\":\"master\",\"required_contexts\":[],\"payload\":{\"version\":\"${quicklisp_version}\"}}"
           fi
